-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.6.2
-
None
-
Win7 SP1, Qt4.8.4, QtCreator 2.6 build from 2.6 branch with Qt4.8.4
-
4d775ac56ac554b85c133d9eff5751d006c6171b
Editing the mkspec or the sysroot moves the cursor to the end of the current text inside the QLineEdit after each typed character.
Steps to reproduce:
- open Creator's Settings dialog
- edit the mkspec or sysroot of an existing kit - do this by editing something in front or in the middle of the already existing text
Expected behaviour:
- no automatical movement of the cursor after each typed key