Kits: Fix editing of sysroot and mkspec

Task-number: QTCREATORBUG-8586

Change-Id: I074d7e85524e4dccef26c46391892477269648ce
Reviewed-by: Daniel Teske <daniel.teske@digia.com>